# agif-tasklet-cell-public

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-docs  PUBLICATION_SCOPE.md  README.md  TRADEMARKS.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  paper-evidence.yml
cells/: duplicate_detector_v1.cell  finance_doc_extractor_neural_v1.cell  finance_doc_extractor_neural_v4.cell  finance_doc_extractor_neural_v6.cell  invoice_completeness_validator_v1.cell  vat_math_checker_v1.cell
cells/duplicate_detector_v1/: manifest.json
cells/finance_doc_extractor_neural_v1/: manifest.json
cells/finance_doc_extractor_neural_v4/: manifest.json
cells/finance_doc_extractor_neural_v6/: manifest.json
cells/invoice_completeness_validator_v1/: manifest.json
cells/vat_math_checker_v1/: manifest.json
docs/: 00_MASTER_SPEC.md  01_ARCHITECTURE.md  02_SECURITY.md  03_CONTRACTS.md  04_EMBEDDING.md  05_PHASE_PLAN.md  06_DECISIONS.md  07_TEST_STRATEGY.md  08_TRAINING_AND_PACKAGING.md  09_NEURAL_CELL_PROFILE.md  09_SECURITY.md  10_HOST_BRIDGE_AND_TRIGGERS.md  11_OBSERVABILITY_AND_REPLAY.md  12_GATEWAY_PROFILE.md  13_REFERENCE_DEMOS.md  CHANGELOG.md  PAPER_EVIDENCE_R1.md  PHASE_MAP.md  README.md  SPEC_vFinal.md  WORKFLOW.md
evidence/: README.md
intelligence/: __init__.py  background_agent.py  episodic_store.py  reasoning_engine.py  reasoning_steps_v1.json  session_memory.py  suggestions_store.py
intelligence/wasm/: Cargo.toml
intelligence/wasm/src/: lib.rs  main.rs
runner/: README.md  cell
sdk/: README.md
(+2483 files in other folders)
