[package]
name = "agif_wasm_inference_v6"
version = "0.1.0"
edition = "2021"

[lib]
name = "agif_wasm_inference_v6"
path = "src/lib.rs"

[[bin]]
name = "logic_wasm_v6"
path = "src/main.rs"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
